History of this buildout
========================

4.24 (unreleased)
-----------------

- Use better upgrade code for MailHost.  The new MailHost worked, but
  was invisible.
  [maurits]


4.23 (2013-04-08)
-----------------

- Use maildrop host.  See zest release notes.
  [maurits]

- Refuse to send an e-mail for newsletters, etcetera, when this e-mail
  has already been sent in the last thirty minutes.  This will raise
  an exception and show a traceback.  We also show a warning on the
  email_out page with the date and time when this item was sent.
  Sending a test e-mail is always possible.
  [maurits]


4.22 (2013-01-22)
-----------------

- Memmon limit: 1300.  Use newer versions for supervisor and friends.
  Send a mail to Maurits via scripts/sendmail.py when memmon kills the
  instance.
  [maurits]


4.21 (2013-01-07)
-----------------

- Let memmon check for a maximum memory of 2000 MB instead of 2560.
  [maurits]


4.20 (2012-12-18)
-----------------

- Changed text of email subscription notification so it correctly
  mentions an Event instead of a Hearing when that is the case.
  [maurits]


4.19 (2012-12-04)
-----------------

- the email_from when sending an email from an EmailMixin object is
  now specified in potal_properties. [vincent]

- Manually trigger transaction.commit after sending
  email. [vincent+maurits]

- Replaced references to "Ignace Decancq" by "Jan Verheeke, Secretaris
  Minaraad". [vincent]

- By default, meeting participants are considered as absent. [vincent]

- Reactivated project reminder crontab, launched at midnight every
  tuesday and friday. [vincent]


4.18 (2012-11-23)
-----------------

- Use custom FCKEditor to fix IE9 issues. [vincent]

- fixed caching for the meeting's location. [vincent]

- Use fresh collective.emaillogin 1.3.  No real changes, it has simply
  moved to github.
  [maurits]


4.17 (2012-11-06)
-----------------

- Plone security hot fix.
  [maurits and apparently wimb too]


4.16 (2012-08-17)