@@ -60,6 +60,13 @@
     />
 
   <browser:page
+      for="*"
+      name="reset_email_sent"
+      class=".email_notification.ResetEmailSent"
+      permission="cmf.ManagePortal"
+    />
+
+  <browser:page
       for="Products.minaraad.content.Hearing.IHearing"
       name="notify_registration"
       class=".email_notification.SubscriptionNotifyView"
